--- a/Frontend/pages/sendmoney.html
+++ b/Frontend/pages/sendmoney.html
@@ -181,14 +181,12 @@
                     <path d="M560-440q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35ZM280-320q-33 0-56.5-23.5T200-400v-320q0-33 23.5-56.5T280-800h560q33 0 56.5 23.5T920-720v320q0 33-23.5 56.5T840-320H280Zm80-80h400q0-33 23.5-56.5T840-480v-160q-33 0-56.5-23.5T760-720H360q0 33-23.5 56.5T280-640v160q33 0 56.5 23.5T360-400Zm440 240H120q-33 0-56.5-23.5T40-240v-440h80v440h680v80ZM280-400v-320 320Z"></path>
                 </svg></button>
         </div>    
-        <footer class="fixed bottom-0 w-full">
             <div class="flex justify-right items-center">
-                <button onclick="window.location.href='home.html'" class="btn text-white bg-[#00a4d3] hover:bg-blue-800 !py-1.5 w-30 h-8 flex items-center justify-center mt-1"> 
+                <button onclick="window.location.href='home.html'" class="btn text-white bg-[#00a4d3] hover:bg-blue-800 !py-1.5 w-60 h-9 flex items-center justify-center mt-1 rounded-lg"> 
                     <span class="material-symbols-outlined">home</span>
                     Back to Home
                 </button>
             </div>
-        </footer>
 
 <!-- <script type="module" src="../functions.js"></script>
  -->
