--- a/Frontend/pages/rewards.html
+++ b/Frontend/pages/rewards.html
@@ -102,7 +102,7 @@
                     </div>
 
                     <div class="bg-[#F5F5F5] w-24 h-4 rounded-md border border-black w-full">
-                        <div class="bg-green-400 w-1/2 h-full rounded-tl-md rounded-bl-md"></div>
+                        <div class="bg-green-400 h-full rounded-tl-md rounded-bl-md levelBar"></div>
                     </div>
                 </div>
             </div>
