--- a/Frontend/pages/home.html
+++ b/Frontend/pages/home.html
@@ -147,7 +147,7 @@
             class="btn btn-green rounded-bl-lg rounded-br-lg !py-1.5 w-full flex gap-x-1.5 items-center justify-center mt-1"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
             width="24px" fill="#e8eaed">
             <path d="m140-220-60-60 300-300 160 160 284-320 56 56-340 384-160-160-240 240Z" />
-        </svg>View Level History</button>
+        </svg>View Level Progress</button>
         </div>
 
         <div class="mt-8 mx-8 bg-white shadow-lg pt-3 rounded-lg">
